Correct z-index

--- a/src/app/content/gallery/gallery.component.sass
+++ b/src/app/content/gallery/gallery.component.sass
@@ -38,14 +38,14 @@
           line-height: 0
 
           &.aae-gallery-img
-            z-index: 50
+            z-index: 10
 
           &.aae-gallery-info
             opacity: 0
             color: $white
             width: 240px
             height: 240px
-            z-index: 100
+            z-index: 20
             font-size: 14px
             line-height: 17px
             padding: 20px
